PyMaker/datas/object2/RawHTML/i2901/Python_DOC_referPages.except-systax-error-in-python-3.txt
<div class="post-text" itemprop="text">
<p>I am trying to write a simple program which will turn lights on and off based on the time of day, in Python 3. </p>
<p>I keep on getting a syntax error when try and use <code>except KeyboardInterrupt:</code> in a <code>while</code> loop. This is the error:</p>
<p><code>except KeyboardInterrupt:
      ^
SyntaxError: invalid syntax</code></p>
<p>As I have doubled checked the syntax with online documentation I am at a loss as to what I am doing wrong and I guess I am missing some piece of understanding here. </p>
<p>here is the full code for reference:</p>
<pre><code>#!/usr/bin/python  

import time
import datetime



#set the start and end times you want the pin to be high
TimeStart = datetime.time(17,0,0)
TimeEnd =  datetime.time(18,30,0)

#Define main fuction 
def onoff():
    while True:
        if TimeEnd &gt; datetime.datetime.now().time() and TimeStart &lt; datetime.datetime.now().time() :
            print ("Pin 18  High" )


        else:
            print ("Pin 18  Low" )

        except KeyboardInterrupt:
            # do nothing here
            pass

            print ("Error..... Quiting.....")

            raise

            sys.exit()

time.sleep(30)   
onoff()
</code></pre>
<p>Many thanks in advanced!    </p>
</div>
<div class="post-text" itemprop="text">
<p>You cannot use the <code>except</code> statement outside of a <code>try:....except...</code> code block.</p>
<p><a href="https://docs.python.org/3.7/tutorial/errors.html#handling-exceptions" rel="nofollow noreferrer">https://docs.python.org/3.7/tutorial/errors.html#handling-exceptions</a></p>
<p>so you would rephrase your code as,</p>
<pre><code>while True:
    try:
        if TimeEnd &gt; datetime.datetime.now().time() and TimeStart &lt; datetime.datetime.now().time() :
            print ("Pin 18  High" )


        else:
            print ("Pin 18  Low" )
    except KeyboardInterrupt:
        # do nothing here
        pass

        print ("Error..... Quiting.....")

        raise

        sys.exit()
</code></pre>
<p>which I haven't tried but essentially,</p>
<ul>
<li>Wraps the if statement with a <code>try</code> clause, and</li>
<li>any <code>KeyboardInterrupt</code> would be captured by the <code>except</code> statement.</li>
</ul>
</div>
<span class="comment-copy">An <code>except</code> must follow a <code>try</code> block</span>
<span class="comment-copy"><code>except</code> belongs with <code>try</code>, not <code>if</code>. See <a href="https://docs.python.org/3/reference/compound_stmts.html" rel="nofollow noreferrer">docs.python.org/3/reference/compound_stmts.html</a></span>
<span class="comment-copy">Look here, do a bit of research please. <a href="https://stackoverflow.com/questions/730764/how-to-properly-ignore-exceptions" title="how to properly ignore exceptions">stackoverflow.com/questions/730764/…</a></span>
<span class="comment-copy"><code>except</code> is not something you can just add to other statements. It's a syntax error because <code>except</code> can only be used when there is a <code>try:</code> block <i>first</i> to connect it to.</span>
<span class="comment-copy">Thank you! that's really helpfull!</span>
